dp1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-mount
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-mount
        configMap:
          name: login
