dp2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgot
  namespace: test 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgot
  template:
    metadata:
      labels:
        app: forgot
    spec:
      containers:
      - name: forgot
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-mount
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-mount
        configMap: 
          name: forgot
