ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: login.devopsdude.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: login
            port:
              number: 80
      - pathType: Prefix
        path: "/login"
        backend:
          service:
            name: forgot
            port:
              number: 80
  - host: payment.devopsdude.space
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: payment
            port:
              number: 80
